# harpoon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
harpoon-atspi/: Cargo.toml  Gir.toml
harpoon-atspi/girs/: Atspi-2.0.gir  GLib-2.0.gir
harpoon-atspi/harpoon-atspi-sys/: Cargo.toml  Gir.toml  build.rs  versions.txt
harpoon-atspi/harpoon-atspi-sys/src/: lib.rs
harpoon-atspi/harpoon-atspi-sys/tests/: abi.rs  constant.c  layout.c
harpoon-atspi/src/: lib.rs
harpoon-atspi/src/auto/: accessible.rs  action.rs  alias.rs  application.rs  collection.rs  component.rs  device.rs  device_event.rs  device_legacy.rs  device_listener.rs  device_x11.rs  document.rs  editable_text.rs  enums.rs  event.rs  event_listener.rs  flags.rs  hyperlink.rs  hypertext.rs  image.rs  key_definition.rs  key_set.rs  match_rule.rs  mod.rs  object.rs  point.rs  range.rs  rect.rs  relation.rs  selection.rs  state_set.rs  table.rs  table_cell.rs  text.rs  text_range.rs  value.rs
harpoon-program/: Cargo.toml
src/: main.rs
