[package]
name = "harpoon"
version = "0.1.0"
edition = "2018"
license = "mit"
description = "A screenreader for Linux."
authors = ["Hunter Jozwiak <hunter.t.joz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple-log = "1.3.3"
speech-dispatcher = "0.7.0"
dbus = "0.9.5"
dbus-tree = "0.9.2"