[package]
name = "harpoon-atspi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi = { package = "atspi-sys", path = "harpoon-atspi-sys"}
bitflags = "1.3.2"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.101"
[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
